<resources>
    <string name="app_name">Course Planner</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="mon">Mon</string>
    <string name="tue">Tues</string>
    <string name="wed">Wed</string>
    <string name="thu">Thur</string>
    <string name="fri">Fri</string>
    <string name="time7am">7 am</string>
    <string name="time8am">8 am</string>
    <string name="time9am">9 am</string>
    <string name="time10am">10 am</string>
    <string name="time11am">11 am</string>
    <string name="time12pm">12 pm</string>
    <string name="time1pm">1 pm</string>
    <string name="time2pm">2 pm</string>
    <string name="time3pm">3 pm</string>
    <string name="time4pm">4 pm</string>
    <string name="time5pm">5 pm</string>
    <string name="time6pm">6 pm</string>
    <string name="time7pm">7 pm</string>
    <string name="time8pm">8 pm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="advanced_sort">Advanced Sort:</string>


</resources>
