<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <RelativeLayout
      android:id="@+id/hoursRelativeLayout"
      android:layout_width="wrap_content"
      android:gravity="left"
      android:layout_height="match_parent"
      android:padding="0dp"
      >

    <TextView
        android:id="@+id/time7amTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp7am"
        android:gravity="center"
        android:text="@string/time7am"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time8amTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp8am"
        android:gravity="center"
        android:text="@string/time8am"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time9amTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp9am"
        android:gravity="center"
        android:text="@string/time9am"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time10amTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp10am"
        android:gravity="center"
        android:text="@string/time10am"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time11amTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp11am"
        android:gravity="center"
        android:text="@string/time11am"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time12pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp12pm"
        android:gravity="center"
        android:text="@string/time12pm"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time1pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp1pm"
        android:gravity="center"
        android:text="@string/time1pm"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time2pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp2pm"
        android:gravity="center"
        android:text="@string/time2pm"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time3pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp3pm"
        android:gravity="center"
        android:text="@string/time3pm"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time4pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp4pm"
        android:gravity="center"
        android:text="@string/time4pm"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time5pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp5pm"
        android:gravity="center"
        android:text="@string/time5pm"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time6pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp6pm"
        android:gravity="center"
        android:text="@string/time6pm"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time7pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp7pm"
        android:gravity="center"
        android:text="@string/time7pm"
        android:textSize="@dimen/hourSize"
        />

    <TextView
        android:id="@+id/time8pmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginTop="@dimen/dp8pm"
        android:gravity="center"
        android:text="@string/time8pm"
        android:textSize="@dimen/hourSize"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp8am"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp9am"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp10am"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp11am"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp12pm"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp1pm"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp2pm"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp3pm"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp4pm"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp5pm"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp6pm"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp7pm"
      android:background="@color/medium_gray"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/dp8pm"
      android:background="@color/medium_gray"
      />

</RelativeLayout>