<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dayLabelsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp">


        <RelativeLayout
            android:id="@+id/mondayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/mondayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@color/medium_dark_gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tuesdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tuesdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/tue"
                android:textColor="@color/medium_dark_gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wednesdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/wednesdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/wed"
                android:textColor="@color/medium_dark_gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/thursdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/thursdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/thu"
                android:textColor="@color/medium_dark_gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fridayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/fridayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/fri"
                android:textColor="@color/medium_dark_gray"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/dividerView"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dayLabelsLinearLayout"
        android:background="@color/medium_gray" />

    <ScrollView
        android:id="@+id/calendarScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/dividerView"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:padding="0dp"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/calendarRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <LinearLayout
                android:id="@+id/calendarSplitterRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:padding="0dp">

                <RelativeLayout
                    android:id="@+id/hoursRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="0dp">

                    <include layout="@layout/calendar_zebra" />

                    <TextView
                        android:id="@+id/time7amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:text="@string/time7am"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time8amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="60dp"
                        android:gravity="center"
                        android:text="@string/time8am"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time9amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="120dp"
                        android:gravity="center"
                        android:text="@string/time9am"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time10amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="180dp"
                        android:gravity="center"
                        android:text="@string/time10am"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time11amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="240dp"
                        android:gravity="center"
                        android:text="@string/time11am"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time12pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="300dp"
                        android:gravity="center"
                        android:text="@string/time12pm"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time1pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="360dp"
                        android:gravity="center"
                        android:text="@string/time1pm"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time2pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="420dp"
                        android:gravity="center"
                        android:text="@string/time2pm"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time3pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="480dp"
                        android:gravity="center"
                        android:text="@string/time3pm"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time4pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="540dp"
                        android:gravity="center"
                        android:text="@string/time4pm"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time5pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="600dp"
                        android:gravity="center"
                        android:text="@string/time5pm"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time6pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="660dp"
                        android:gravity="center"
                        android:text="@string/time6pm"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time7pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="720dp"
                        android:gravity="center"
                        android:text="@string/time7pm"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/time8pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="780dp"
                        android:gravity="center"
                        android:text="@string/time8pm"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mondayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <include layout="@layout/calendar_zebra" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tuesdayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <include layout="@layout/calendar_zebra" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/wednesdayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <include
                        layout="@layout/calendar_zebra"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/thursdayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <include layout="@layout/calendar_zebra" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fridayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <include layout="@layout/calendar_zebra" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>