<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    >
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="36dp"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="8dp"
      android:background="@color/schedule_selector_bg"
      android:orientation="horizontal"
      >
    <ImageView
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/quantity_number_bg"
        android:scaleX="-1"
        app:srcCompat="@drawable/forward_button"
        />
    <com.example.myothiha09.coursehelper.layout_helper.CustomFontRegular
        android:id="@+id/textTitle"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:background="@drawable/quantity_number_bg"
        android:gravity="center"
        android:text="Schedule #"
        android:textColor="@color/title_font_color"
        android:textSize="14sp"
        />
    <ImageView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/quantity_number_bg"
        app:srcCompat="@drawable/forward_button"
        />
  </LinearLayout>


  <LinearLayout
      android:id="@+id/dayLabelsLinearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="30dp"
      android:layout_marginTop="32dp"
      android:baselineAligned="false"
      >


    <RelativeLayout
        android:id="@+id/mondayHeaderRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        >

      <TextView
          android:id="@+id/mondayTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="6dp"
          android:gravity="center"
          android:text="@string/mon"
          android:textColor="@color/medium_dark_gray"
          android:textSize="15dp"
          android:textStyle="bold"
          />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tuesdayHeaderRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        >

      <TextView
          android:id="@+id/tuesdayTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="6dp"
          android:text="@string/tue"
          android:textColor="@color/medium_dark_gray"
          android:textSize="15dp"
          android:textStyle="bold"
          />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wednesdayHeaderRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        >

      <TextView
          android:id="@+id/wednesdayTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="6dp"
          android:text="@string/wed"
          android:textColor="@color/medium_dark_gray"
          android:textSize="15dp"
          android:textStyle="bold"
          />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/thursdayHeaderRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        >

      <TextView
          android:id="@+id/thursdayTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="6dp"
          android:text="@string/thu"
          android:textColor="@color/medium_dark_gray"
          android:textSize="15dp"
          android:textStyle="bold"
          />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fridayHeaderRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        >

      <TextView
          android:id="@+id/fridayTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="6dp"
          android:text="@string/fri"
          android:textColor="@color/medium_dark_gray"
          android:textSize="15dp"
          android:textStyle="bold"
          />
    </RelativeLayout>

  </LinearLayout>

  <View
      android:id="@+id/dividerView"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@+id/dayLabelsLinearLayout"
      android:background="@color/medium_gray"
      />

  <FrameLayout
      android:id="@+id/calendarScrollView"
      android:layout_width="match_parent"
      android:layout_height="fill_parent"
      android:layout_alignParentBottom="true"
      android:layout_below="@+id/dividerView"
      android:fadingEdge="none"
      android:overScrollMode="never"
      android:padding="0dp"
      android:scrollbars="none"
      >
    <include
        layout="@layout/cal_zebra"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        />
    <LinearLayout
        android:id="@+id/calendarRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp"
        >
      <View
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          />

      <RelativeLayout
          android:id="@+id/mondayRelativeLayout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          >
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/tuesdayRelativeLayout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          >

      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/wednesdayRelativeLayout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          >

      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/thursdayRelativeLayout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          >

      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/fridayRelativeLayout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          >

      </RelativeLayout>
    </LinearLayout>

  </FrameLayout>


</RelativeLayout>